# humboldt-microtransit-evaluation

./: .gitignore  README.md  pyproject.toml  settings.toml
hcme/: __init__.py  cli.py  settings.py
hcme/beamio/: constants.py  factory.py  households.py  osm2physsim.py  population.py
hcme/beamio/templates/: household_attributes.xml.j2  households.xml.j2  physsim-network.xml.j2  population.xml.j2  population_attributes.xml.j2
hcme/beamio/tests/: test_factory.py
hcme/scripts/: calculate_network_capacity.py
