[project]
name = "hcme"
version = "0.0.1"
description = ""
authors = [
    {name = "Thomas Tu", email = "tt169@humboldt.edu"},
]
dependencies = ["dynaconf~=3.1"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
beam = {call = "hcme.cli:main"}
