[project]
name = "hcme"
version = "0.0.1"
description = ""
authors = [
    {name = "Thomas Tu", email = "tt169@humboldt.edu"},
]
dependencies = ["dynaconf~=3.1", "populationsim~=0.5", "prefect~=0.15", "lxml~=4.6", "Jinja2~=3.0", "pyproj~=3.1"]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["hcme"]

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
beam = {call = "hcme.cli:main"}
